--- a/_data/areas/edge/board.yml
+++ b/_data/areas/edge/board.yml
@@ -8,5 +8,7 @@ chairs:
   email: richard.mortier@cl.cam.ac.uk
   orcid: 0000-0001-5205-5992
   twitter: mort___
+  from: 2022
+  until: 0
 
 members:
