--- a/_data/areas/rt_cps/board.yml
+++ b/_data/areas/rt_cps/board.yml
@@ -8,6 +8,8 @@ chairs:
   email: sibin.mohan@oregonstate.edu
   orcid: 0000-0002-3295-0233
   twitter: sibinmohan
+  from: 2021
+  until: 0
 
 members:
 
@@ -16,57 +18,77 @@ members:
   webpage: http://stanleybak.com/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Parasara Sridhar Duggirala 
   affiliation: UNC Chapel Hill
   webpage: https://www.cs.unc.edu/~psd/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Arpan Gujarati 
   affiliation: MPI-SWS/University of British Columbia
   webpage: https://people.mpi-sws.org/~arpanbg/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Monowar Hasan 
   affiliation: Wichita State University
   webpage: https://monowarhasan.info/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Zbigniew Kalbarczyk 
   affiliation: University of Illinois at Urbana-Champaign
   webpage: https://csl.illinois.edu/directory/faculty/kalbarcz
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Martina Maggio 
   affiliation: Saarland University
   webpage: http://www.martinamaggio.com/main/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Renato Mancuso 
   affiliation: Boston University
   webpage: https://cs-people.bu.edu/rmancuso/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Garbiel Parmer 
   affiliation: George Washington University
   webpage: https://www2.seas.gwu.edu/~gparmer/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Marcus Völp 
   affiliation: University of Luxembourg
   webpage: https://wwwfr.uni.lu/snt/people/marcus_voelp
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Marco Zimmerling 
   affiliation: TU Dresden
   webpage: https://wwwpub.zih.tu-dresden.de/~mzimmerl/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
