--- a/_data/areas/security/board.yml
+++ b/_data/areas/security/board.yml
@@ -8,6 +8,8 @@ chairs:
   email: mathias.payer@nebelwelt.net
   orcid: 0000-0001-5054-7547
   twitter: gannimo
+  from: 2022
+  until: 0
 
 members:
 
@@ -16,40 +18,54 @@ members:
   webpage: https://francozappa.github.io/
   orcid: 0000-0002-9342-3920
   twitter: francozappa
+  from: 2022
+  until: 0
 
 - name: Tiffany Bao
   affiliation: Arizona State University
   webpage: https://www.tiffanybao.com/
   orcid: 
   twitter: ___tiffanyb___
+  from: 2022
+  until: 0
   
 - name: Antonio Bianchi
   affiliation: Purdue University
   webpage: https://antoniobianchi.me/
   orcid: 
   twitter: anton00b
+  from: 2022
+  until: 0
   
 - name: Stefan Brunthaler
   affiliation: Universität der Bundeswehr München
   webpage: https://www.unibw.de/code/im-profil/professuren/univ-prof-dr-stefan-brunthaler
   orcid: 0000-0001-9766-4871
   twitter: stbrunthaler
+  from: 2022
+  until: 0
 
 - name: Yanick Fratantonio
   affiliation: Cisco Talos
   webpage: https://reyammer.io/
   orcid: 
   twitter: reyammer
+  from: 2022
+  until: 0
 
 - name: Aastha Mehta
   affiliation: University of British Columbia
   webpage: https://aasthakm.github.io/
   orcid: 
   twitter:
+  from: 2022
+  until: 0
 
 - name: Alessandro Sorniotti
   affiliation: IBM Research
   webpage: https://ale.sopit.net/
   orcid: 
   twitter: sigusr0
+  from: 2022
+  until: 0
 
