--- a/_data/areas/students/board.yml
+++ b/_data/areas/students/board.yml
@@ -8,6 +8,8 @@ chairs:
   email: ag@cs.wisc.edu
   orcid: 
   twitter: AishwaryaGanlat
+  from: 2021
+  until: 0
 
 - name: Ramnatthan Alagappan
   affiliation: VMware Research Group
@@ -15,6 +17,8 @@ chairs:
   email: ralagappan@vmware.com
   orcid: 
   twitter: ramnatthan
+  from: 2021
+  until: 0
 
 members:
 
@@ -23,190 +27,254 @@ members:
   webpage: https://cs.uwaterloo.ca/~amsalqur/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Anam Farrukh
   affiliation: Boston University
   webpage: http://cs-people.bu.edu/afarrukh/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Arjun Singhvi
   affiliation: University of Wisconsin-Madison
   webpage: http://pages.cs.wisc.edu/~asinghvi/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Ashish Kashinath
   affiliation: University of Illinois at Urbana-Champaign
   webpage: https://ashishk3.web.illinois.edu/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Bashima Islam
   affiliation:  University of North Carolina at Chapel Hill
   webpage: https://www.cs.unc.edu/~bashima/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Cesar A. Stuardo
   affiliation: University of Chicago
   webpage: http://people.cs.uchicago.edu/~castuardo/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Chengcheng Xiang
   affiliation: UC San Diego
   webpage: https://evonx.github.io/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Chinmay Kulkarni
   affiliation: University of Utah
   webpage: https://www.chinmayk.net/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Emma Dauterman
   affiliation: University of California Berkeley
   webpage: https://people.eecs.berkeley.edu/~edauterman/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Ian Neal
   affiliation: University of Michigan
   webpage: https://about.iangneal.io/pub/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Jayashree Mohan
   affiliation: University of Texas at Austin
   webpage: https://www.cs.utexas.edu/~jaya/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Jianhai Su
   affiliation: University of Southern California
   webpage: https://oceank.github.io/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Joel Scheuner
   affiliation: Chalmers, University of Gothenburg
   webpage: https://joelscheuner.com/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Kirill Nikitin
   affiliation: EPFL
   webpage: https://nikirill.com/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Kan Wu
   affiliation: University of Wisconsin – Madison
   webpage: http://pages.cs.wisc.edu/~kanwu/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Kostis Kaffes
   affiliation:  Stanford University
   webpage: https://stanford.edu/~kkaffes/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Le Xu
   affiliation:  University of Illinois at Urbana Champaign
   webpage: http://lexu1.web.engr.illinois.edu/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Miguel Velez
   affiliation:  CMU
   webpage: http://www.cs.cmu.edu/~mvelezce/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Nathan Pemberton
   affiliation:  University of California Berkeley
   webpage: https://people.eecs.berkeley.edu/~nathanp/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Oleksii Oleksenko
   affiliation:  TU Dresden
   webpage: https://se.inf.tu-dresden.de/pubs/bibtexbrowser.php?bib=se.bib&all&nomenu=1&search=Oleksii%20Oleksenko
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Qingqing Cao
   affiliation:  Stony Brook University
   webpage: https://awk.ai/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Shahriar Iqbal
   affiliation:  USC
   webpage: https://iqbal128855.github.io/iqbal128855/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Solal Pirelli
   affiliation:  EPFL
   webpage: https://dslab.epfl.ch/people/pirelli/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Suyash Gupta
   affiliation:  University of California Davis
   webpage: https://gupta-suyash.github.io/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Tirthak Patel
   affiliation:  Northeastern University
   webpage: http://www1.ece.neu.edu/~tirthak/index.html
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Xiao Zhu
   affiliation:  University of Michigan
   webpage: https://xiaoshawnzhu.github.io/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Xingda Wei
   affiliation:  Shanghai Jiao Tong University
   webpage: http://xmm4ok69.com/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Xudong Sun
   affiliation:  UIUC
   webpage: https://marshtompsxd.github.io/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Yawen Wang
   affiliation:  Stanford University
   webpage: 
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Yizhou Shan
   affiliation:  UC San Diego
   webpage: http://lastweek.io/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Youmin Chen
   affiliation:  Tsinghua University
   webpage: http://storage.cs.tsinghua.edu.cn/~cym/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
 - name: Zili Meng
   affiliation:  Tsinghua University
   webpage: https://zilimeng.com/
   orcid: 
   twitter: 
+  from: 2021
+  until: 0
 
