added email of publicity chairs

--- a/_data/management.yml
+++ b/_data/management.yml
@@ -44,14 +44,14 @@ publicity:
 - name: Vaastav Anand 
   affiliation:  Max Planck Institute for Software Systems (MPI-SWS)
   webpage: https://vaastavanand.com/
-  email: 
+  email: vaastav.anand05@gmail.com
   orcid: 
   twitter: vaastav05
 
 - name: Roberta De Viti
   affiliation: Max Planck Institute for Software Systems (MPI-SWS)
   webpage: https://rdeviti.netlify.app/
-  email: 
+  email: r.deviti@gmail.com
   orcid: 
   twitter: rdeviti
 
