fixed twitter handle

--- a/_data/areas/sysML_MLsys/board.yml
+++ b/_data/areas/sysML_MLsys/board.yml
@@ -5,7 +5,7 @@ chairs:
   affiliation: KTH Royal Institute of Technology
   webpage: https://payberah.github.io/
   orcid: 
-  twitter: @apayberah
+  twitter: apayberah
   from: 2022
   until: 0
   
