fixed twitter handle

--- a/_data/areas/sysML_MLsys/board.yml
+++ b/_data/areas/sysML_MLsys/board.yml
@@ -56,7 +56,7 @@ members:
   affiliation: KTH Royal Institute of Technology
   webpage: https://payberah.github.io/
   orcid: 
-  twitter: @apayberah
+  twitter: apayberah
   from: 2021
   until: 2022
 
