update sibin affiliation

--- a/_data/areas/rt_cps/board.yml
+++ b/_data/areas/rt_cps/board.yml
@@ -3,9 +3,9 @@ area: Real-Time and Cyber-Physical Systems
 chairs:
 
 - name: Sibin Mohan
-  affiliation: Oregon State University
+  affiliation: The George Washington University
   webpage: https://sibin.github.io/sibin
-  email: sibin.mohan@oregonstate.edu
+  email: sibin.mohan@gwu.edu
   orcid: 0000-0002-3295-0233
   twitter: sibinmohan
   from: 2021
