Update the editorial board of configuration management and students

--- a/_data/areas/confManagement/board.yml
+++ b/_data/areas/confManagement/board.yml
@@ -109,3 +109,11 @@ members:
   twitter:
   from: 2022
   until: 0
+
+- name: Chengcheng (CC) Xiang
+  affiliation: Meta
+  webpage: https://evonx.github.io/
+  orcid:
+  twitter:
+  from: 2022
+  until: 0
