Revise editorial board -> reviewers, update assistant editors.

--- a/_data/areas/artifacts/cfp.yml
+++ b/_data/areas/artifacts/cfp.yml
@@ -14,7 +14,7 @@ introduction:
 
 responsibilities:
   # title: Responsibilities
-  # text: Being a member of the student editorial board comes with the following responsibilities
+  # text: Being a reviewer comes with the following responsibilities
   items: 
 
 
