--- a/_data/areas/students/cfp.yml
+++ b/_data/areas/students/cfp.yml
@@ -14,13 +14,13 @@ introduction:
 
 responsibilities:
   title: Responsibilities
-  text: Being a member of the student editorial board comes with the following responsibilities
+  text: Being a reviewer comes with the following responsibilities
   items: 
-    - You will be assigned up to 3 papers to review (at one of our four quarterly deadlines -- Feb, May, August, November). The review must be completed in 1.5 months. We will try to keep the load as low as possible.
+    - You will be assigned up to 3 papers to review (at one of our four quarterly deadlines -- March, May, August, October). The review must be completed in 1.5 months. We will try to keep the load as low as possible.
     - If a paper is marked as "Revise" (this will be common), you must commit to reviewing the revised version of the paper and making a decision
     - You should contribute thoughtful reviews that engage with the submitted paper.
     - You should be willing to sign your name on the papers you review that are accepted by JSys.
     - Optionally, you can write a summary (along with the other reviewers) "introducing" the paper to the rest of the community.
-    - You should follow JSys ethical standards, in not discussing the paper with anyone not on the Editorial Board, and not using the ideas in your research.
+    - You should follow JSys ethical standards, in not discussing the paper with anyone besides other reviewers and the Area Chair, and not using the ideas in your research.
     - We ask that you review papers that you have high expertise in (typically the area that you are working on in your PhD). Do not review papers where you are interested in the topic, but cannot provide expert reviews.
-    - Being a member of the Student Editorial Board is a 1-year responsibility, so please make sure you will have enough time before taking this on.
+    - Being a reviewer is a 1-year responsibility, so please make sure you will have enough time before taking this on.
