Change affil and clarify reviewer versus board.

--- a/_data/management.yml
+++ b/_data/management.yml
@@ -19,9 +19,9 @@ eic:
 assistants:
 
 - name: Madelon Hulsebos
-  affiliation: University of Amsterdam and Sigma Computing
+  affiliation: University of Amsterdam
   webpage: https://madelonhulsebos.github.io
-  email: madelon.hulsebos@gmail.com
+  email: m.hulsebos@uva.nl
   orcid: 0000-0002-0949-7290
   twitter: MadelonHulsebos
 
