updated the serverless area board
new review board member added

--- a/_data/areas/serverless/board.yml
+++ b/_data/areas/serverless/board.yml
@@ -85,3 +85,11 @@ members:
   twitter: 
   from: 2021
   until: 0
+
+- name: Noman Bashir
+  affiliation: University of Massachusetts Amherst
+  webpage: https://noman-bashir.github.io/
+  orcid: 
+  twitter: 
+  from: 2023
+  until: 0
