Added details about Stefan (#29)
* Added Stefan's details

* Added stefan's details

--- a/_data/areas/security/board.yml
+++ b/_data/areas/security/board.yml
@@ -1,6 +1,13 @@
 area: System Security
 
 chairs:
+- name: Stefan Brunthaler
+  affiliation: Universität der Bundeswehr München
+  webpage: https://www.unibw.de/code/im-profil/professuren/univ-prof-dr-stefan-brunthaler
+  orcid: 0000-0001-9766-4871
+  twitter: stbrunthaler
+  from: 2022
+  until: 0
 
 - name: Mathias Payer
   affiliation: EPFL
@@ -9,7 +16,7 @@ chairs:
   orcid: 0000-0001-5054-7547
   twitter: gannimo
   from: 2022
-  until: 0
+  until: 2023
 
 members:
 
