added Kishori to the consensus area

--- a/_data/areas/distConsensus/board.yml
+++ b/_data/areas/distConsensus/board.yml
@@ -31,6 +31,14 @@ chairs:
 
 members:
 
+- name: Kishori Konwar
+  affiliation: Gatehouse Bio
+  webpage: https://kishorikonwar.com/
+  orcid: 
+  twitter: 
+  from: 2023
+  until: 0
+
 - name: Ailidani Ailijiang
   affiliation:  Microsoft
   webpage: https://scholar.google.com/citations?user=D6PWsuwAAAAJ&hl=en
