--- a/_data/areas/distConsensus/board.yml
+++ b/_data/areas/distConsensus/board.yml
@@ -12,9 +12,9 @@ chairs:
   until: 0
 
 - name: Lewis Tseng
-  affiliation: Boston University
+  affiliation: Clark University
   webpage: https://www.bc.edu/bc-web/schools/mcas/departments/computer-science/people/faculty-directory/lewis-tseng.html
-  email: lewis.tseng@bc.edu
+  email: lewistseng@acm.org
   orcid: 0000-0002-4717-4038
   twitter: 
   from: 2022
