edit Lewis website

--- a/_data/areas/distConsensus/board.yml
+++ b/_data/areas/distConsensus/board.yml
@@ -13,7 +13,7 @@ chairs:
 
 - name: Lewis Tseng
   affiliation: Clark University
-  webpage: https://www.bc.edu/bc-web/schools/mcas/departments/computer-science/people/faculty-directory/lewis-tseng.html
+  webpage: https://sites.google.com/site/lewiscytseng/home
   email: lewistseng@acm.org
   orcid: 0000-0002-4717-4038
   twitter: 
