--- a/_data/openReview.yml
+++ b/_data/openReview.yml
@@ -1,5 +1,15 @@
 forums:
 
+- title: Aug 2023 - Paper 
+  open: 1
+  show: 1
+  url: https://openreview.net/group?id=JSYS/2023/Aug_Papers
+
+- title: Aug 2023 - Aritfact 
+  open: 1
+  show: 1
+  url: https://openreview.net/group?id=JSYS/2023/Aug_Artifacts
+    
 - title: May 2023 - Paper 
   open: 0
   show: 1
@@ -79,3 +89,5 @@ forums:
   open: 0
   show: 0
   url: https://openreview.net/group?id=JSYS/2021/Aug_Artifacts
+
+    
