--- a/_data/openReview.yml
+++ b/_data/openReview.yml
@@ -5,7 +5,7 @@ forums:
   show: 1
   url: https://openreview.net/group?id=JSYS/2023/Aug_Papers
 
-- title: Aug 2023 - Aritfact 
+- title: Aug 2023 - Artifact 
   open: 1
   show: 1
   url: https://openreview.net/group?id=JSYS/2023/Aug_Artifacts
@@ -15,7 +15,7 @@ forums:
   show: 1
   url: https://openreview.net/group?id=JSYS/2023/May_Papers
 
-- title: May 2023 - Aritfact 
+- title: May 2023 - Artifact 
   open: 0
   show: 1
   url: https://openreview.net/group?id=JSYS/2023/May_Artifacts
@@ -25,7 +25,7 @@ forums:
   show: 1
   url: https://openreview.net/group?id=JSYS/2023/March_Papers
 
-- title: March 2023 - Aritfact 
+- title: March 2023 - Artifact 
   open: 0
   show: 1
   url: https://openreview.net/group?id=JSYS/2023/March_Artifacts
@@ -35,7 +35,7 @@ forums:
   show: 0
   url: https://openreview.net/group?id=JSYS/2022/Oct_Papers
 
-- title: October 2022 - Aritfact 
+- title: October 2022 - Artifact 
   open: 0
   show: 0
   url: https://openreview.net/group?id=JSYS/2022/Oct_Artifacts
@@ -45,7 +45,7 @@ forums:
   show: 0
   url: https://openreview.net/group?id=JSYS/2022/Aug_Papers
 
-- title: August 2022 - Aritfact 
+- title: August 2022 - Artifact 
   open: 0
   show: 0
   url: https://openreview.net/group?id=JSYS/2022/Aug_Artifacts
@@ -55,7 +55,7 @@ forums:
   show: 0
   url: https://openreview.net/group?id=JSYS/2022/May_Papers
 
-- title: May 2022 - Aritfact 
+- title: May 2022 - Artifact 
   open: 0
   show: 0
   url: https://openreview.net/group?id=JSYS/2022/May_Artifacts
@@ -65,7 +65,7 @@ forums:
   show: 0
   url: https://openreview.net/group?id=JSYS/2022/Feb_Papers
 
-- title: Feb. 2022 - Aritfact 
+- title: Feb. 2022 - Artifact 
   open: 0
   show: 0
   url: https://openreview.net/group?id=JSYS/2022/Feb_Artifacts
@@ -75,7 +75,7 @@ forums:
   show: 0
   url: https://openreview.net/group?id=JSYS/2021/Nov_Papers
 
-- title: Nov. 2021 - Aritfact 
+- title: Nov. 2021 - Artifact 
   open: 0
   show: 0
   url: https://openreview.net/group?id=JSYS/2021/Nov_Artifacts
