Updating vijay info

--- a/_data/management.yml
+++ b/_data/management.yml
@@ -3,7 +3,7 @@ title: JSys Manamagement
 eic:
 
 - name: Vijay Chidambaram
-  affiliation: University of Texas at Austin and VMware Research
+  affiliation: University of Texas at Austin
   webpage: https://www.cs.utexas.edu/~vijay/
   email: vijayc@utexas.edu
   orcid: 0000-0003-4915-6738
