added endogeny in the journal statistics

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,8 +36,8 @@ side-nav:
         url: /board
       - title: "Policies"
         url: /policies
-      # - title: "Stats"
-      #   url: /stats
+      - title: "Stats"
+        url: /stats
       - title: "Contact"
         url: /contact
   - title: "Contribute"
