--- a/_data/areas/networking/board.yml
+++ b/_data/areas/networking/board.yml
@@ -2,6 +2,15 @@ area: Networking
 
 chairs:
 
+- name: Ahmed Saeed
+  affiliation: Georgia Tech
+  webpage: https://faculty.cc.gatech.edu/~amsmti3/
+  email: asaeed@cc.gatech.edu
+  orcid: 0000-0003-0498-0854
+  twitter: @ahmad_saeed
+  from: 2023
+  until: 0
+
 - name: Francis Yan
   affiliation: Microsoft Research
   webpage: https://francisyyan.org/
@@ -9,7 +18,7 @@ chairs:
   orcid:
   twitter:
   from: 2021
-  until: 0
+  until: 2023
 
 - name: Sangeetha Abdu Jyothi
   affiliation: UC Irvine
@@ -18,7 +27,7 @@ chairs:
   orcid:
   twitter:
   from: 2021
-  until: 0
+  until: 2023
 
 - name: Junchen Jiang
   affiliation: University of Chicago
