FIX: forgot quote around @

--- a/_data/areas/networking/board.yml
+++ b/_data/areas/networking/board.yml
@@ -7,7 +7,7 @@ chairs:
   webpage: https://faculty.cc.gatech.edu/~amsmti3/
   email: asaeed@cc.gatech.edu
   orcid: 0000-0003-0498-0854
-  twitter: @ahmad_saeed
+  twitter: "@ahmad_saeed"
   from: 2023
   until: 0
 
